src/styles/designs/designs.module.scss
.root {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5rem 1rem;

    h1 {
        max-width: 768px;
    }

    .bg {
        background-image: url("/stars.png");
        background-position: 50%;
        background-size: 1090px;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        overflow: hidden;
    }

    .header {
        display: flex;
        flex-direction: column;
        margin-bottom: 5rem;
        text-align: center;
    }

    .group {
        text-align: center;
        white-space: nowrap;
        overflow: hidden;
        z-index: 1;
        margin: 5rem 1rem;

        .item {
            width: 20vw;
            height: 45vh;
            background-position: center;
            background-size: 75vh;
            background-repeat: no-repeat;
            margin: 0.5vw;
            border-radius: 3vw;
            display: inline-block;
            cursor: pointer;
        }

        video {
            object-fit: cover;
        }
    }

}

@media (max-width: 980px) {
    .root {
        .group {
            display: flex;
            flex-wrap: wrap;
            justify-content: center;
            gap: 1rem;

            .item {
                width: 60vw;

                img {
                    background-position: 100% 100%;
                }
            }
        }
    }
}

